# hackathon

./: .gitignore  ToobaHakathonAI2024.ipynb  environment.yml  pyproject.toml  readme.md
baseline/: README.md  dataset.py  train.py
data/: campaigns.xlsx  charities.xlsx  keywords.xlsx  regions.xlsx
models/: SimpleModel.py  simple_model.py
src/: generate_sessions.py  session_table.py  utils.py
